# ChessPart3

./: .gitignore  CMakeLists.txt  ChessPart3.sln  approach.txt  main.cpp
ChessPart3/: Button.cpp  Button.h  ChessGUI.cpp  ChessGUI.h  ChessPart3.cpp  ChessPart3.vcxproj  Chessboard.cpp  Chessboard.h  GUI.h  GUI_Screens.h  Move.cpp  Move.h  MultiplayerChessGUI.cpp  PieceType.h  Square.h  TextBox.cpp  TextBox.h  pieceColor.h  resource.h
ChessPart3_Tests/: test.cpp
Engine/: Board.cpp  Board.h  Evaluator.cpp  Evaluator.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveTree.cpp  MoveTree.h  PieceType.cpp  PieceType.h  Search.cpp  Search.h  TTEntry.cpp  TTEntry.h  pieceColor.cpp  pieceColor.h
Engine/oldCode/: Chessboard.cpp  Piece.h
GUI/: Button.cpp  Button.h  ChessGUI.cpp  ChessGUI.h  ChessPart3.cpp  ChessPart3.vcxproj.filters  GUI.cpp  GUI.h  MultiplayerChessGUI.cpp  MultiplayerChessGUI.h  Piece.cpp  Piece.h  TextBox.cpp
Tests/: ChessPart3_Tests.vcxproj
